# power-demand-forcasting

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: feature-pipeline.yml  inference-pipeline.yml  training-pipeline.yml
data/raw/weather_raw_data/: weather_data_2023-01-02_to_2023-01-21.csv  weather_data_2023-01-02_to_2024-01-02.csv  weather_data_2024-01-01_to_2024-12-31.csv  weather_data_2024-01-03_to_2024-04-08.csv  weather_data_2024-01-03_to_2024-04-09.csv  weather_data_2024-01-03_to_2024-04-10.csv  weather_data_2024-01-03_to_2025-01-01.csv
models/: minmax_scaler.pkl
models/enhanced_new/: feature_columns.pkl
nootbooks/: 1-feature_pipline.ipynb  2-training-pipline-enhanced-transformer.ipynb  2-training-pipline-transformer.ipynb  3-inference_pipline.ipynb
src/: inference_tr.py  plot.py
src/component/: data_info.py  feature_group_config.py  feature_store_api.py  inference.py  model_info.py  monitoring.py
src/piplines/: inference_pipline.py
