[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "power_demand_prediction"
version = "0.1.0"
description = "Your project description"
authors = [{ name = "thara", email = "tharangasg.20@gmail.com" }]

dependencies = [
    "python-dotenv",
    "requests>=2.32.3",
    "pandas>=2.1.4",
    "plotly>=5.24.1",
    "nbformat>=4.2.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.0",
    "tqdm>=4.67.1",
    "scikit-learn==1.5.2",
    "pyarrow<15.0",
    "xgboost>=1.7.6",
    "lightgbm>=4.5.0",
    "optuna>=4.2.0",
    "hopsworks<4.15",
    "comet-ml>=3.48.1",
    "streamlit>=1.41.1",
    "geopandas>=1.0.1",
    "deck>=3.0.0",
    "requests-cache>=1.2.1",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "retry-requests>=2.0.0",
    "openmeteo-requests>=1.3.0"
]
